Fixed center-content being off-center when a scroll bar was present

--- a/style/main.css
+++ b/style/main.css
@@ -145,8 +145,7 @@ img
 {
 	display: flex;
 	justify-content: center;
-	width: 90vw;
-	margin-left: 5vw;
+	margin: 0 auto;
 }
 
 
